--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,39 @@
+# ===============================
+# Application
+# ===============================
 spring.application.name=demo
-# Don't change the port
-server.port = 9001
-# for https
-server.forward-headers-strategy=framework 
 
+# ===============================
+# Server
+# ===============================
+server.port=9001
+server.forward-headers-strategy=framework
 
+# ===============================
+# Datasource (MySQL)
+# ===============================
+spring.datasource.url=jdbc:mysql://localhost:3306/tarensport_pro?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=Amypo
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# ===============================
+# JPA / Hibernate
+# ===============================
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# ⚠️ IMPORTANT: Use MySQLDialect (Spring Boot 3)
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+# ===============================
+# Swagger
+# ===============================
+springdoc.swagger-ui.path=/swagger-ui/index.html
+
+# ===============================
+# JWT (required by JwtUtil)
+# ===============================
+jwt.secret=MySecretKeyForJwtToken12345
+jwt.expiration=3600000
