--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,20 @@
     <name>Vendor Compliance</name>
     <description>Vendor Compliance – Document Validator</description>
 
+    <!-- ==================== -->
+    <!-- PROPERTIES -->
+    <!-- ==================== -->
     <properties>
         <java.version>17</java.version>
         <spring.boot.version>3.2.5</spring.boot.version>
         <jjwt.version>0.11.5</jjwt.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
+    <!-- ==================== -->
+    <!-- DEPENDENCY MANAGEMENT -->
+    <!-- ==================== -->
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -33,27 +41,30 @@
         </dependencies>
     </dependencyManagement>
 
+    <!-- ==================== -->
+    <!-- DEPENDENCIES -->
+    <!-- ==================== -->
     <dependencies>
 
-        <!-- Spring Boot Core -->
+        <!-- Spring Web -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!-- JPA / Hibernate -->
+        <!-- Spring Data JPA -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
-        <!-- Security -->
+        <!-- Spring Security -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
-        <!-- MySQL -->
+        <!-- MySQL Driver -->
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
@@ -86,7 +97,11 @@
             <version>2.5.0</version>
         </dependency>
 
-        <!-- Testing -->
+        <!-- ==================== -->
+        <!-- TESTING -->
+        <!-- ==================== -->
+
+        <!-- Spring Boot Test (JUnit excluded) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -99,6 +114,7 @@
             </exclusions>
         </dependency>
 
+        <!-- TestNG -->
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
@@ -106,6 +122,7 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Mockito -->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
@@ -115,15 +132,30 @@
 
     </dependencies>
 
+    <!-- ==================== -->
+    <!-- BUILD -->
+    <!-- ==================== -->
     <build>
         <plugins>
 
+            <!-- JAVA VERSION FIX -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
+            </plugin>
+
+            <!-- SPRING BOOT -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
 
-            <!-- REQUIRED FOR TESTNG -->
+            <!-- TESTNG -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
