--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
+    <!-- PROJECT COORDINATES -->
     <groupId>com.example</groupId>
     <artifactId>demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
@@ -15,9 +16,7 @@
     <name>Vendor Compliance</name>
     <description>Vendor Compliance – Document Validator</description>
 
-    <!-- ==================== -->
     <!-- PROPERTIES -->
-    <!-- ==================== -->
     <properties>
         <java.version>17</java.version>
         <spring.boot.version>3.2.5</spring.boot.version>
@@ -26,9 +25,7 @@
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
-    <!-- ==================== -->
     <!-- DEPENDENCY MANAGEMENT -->
-    <!-- ==================== -->
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -41,9 +38,7 @@
         </dependencies>
     </dependencyManagement>
 
-    <!-- ==================== -->
     <!-- DEPENDENCIES -->
-    <!-- ==================== -->
     <dependencies>
 
         <!-- Spring Web -->
@@ -64,7 +59,7 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
-        <!-- MySQL Driver -->
+        <!-- MySQL -->
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
@@ -90,18 +85,14 @@
             <scope>runtime</scope>
         </dependency>
 
-        <!-- Swagger / OpenAPI -->
+        <!-- Swagger -->
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.5.0</version>
         </dependency>
 
-        <!-- ==================== -->
         <!-- TESTING -->
-        <!-- ==================== -->
-
-        <!-- Spring Boot Test (JUnit excluded) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -114,7 +105,6 @@
             </exclusions>
         </dependency>
 
-        <!-- TestNG -->
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
@@ -122,7 +112,6 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Mockito -->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
@@ -132,13 +121,11 @@
 
     </dependencies>
 
-    <!-- ==================== -->
     <!-- BUILD -->
-    <!-- ==================== -->
     <build>
         <plugins>
 
-            <!-- JAVA VERSION FIX -->
+            <!-- COMPILER -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -149,10 +136,11 @@
                 </configuration>
             </plugin>
 
-            <!-- SPRING BOOT -->
+            <!-- SPRING BOOT (FIXED LOCATION) -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>3.2.5</version>
             </plugin>
 
             <!-- TESTNG -->
