--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,17 +23,31 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-# ⚠️ IMPORTANT: Use MySQLDialect (Spring Boot 3)
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 # ===============================
-# Swagger
+# Swagger/OpenAPI
 # ===============================
-springdoc.swagger-ui.path=/swagger-ui/index.html
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.enabled=true
 
 # ===============================
-# JWT (required by JwtUtil)
+# JWT Configuration
 # ===============================
-jwt.secret=MySecretKeyForJwtToken12345
-jwt.expiration=3600000
+# IMPORTANT: JWT secret must be at least 32 characters for HS256
+jwt.secret=MySecretKeyForJwtToken12345MySecretKeyForJwtToken12345
+jwt.expiration=86400000
+
+# ===============================
+# CORS (Additional Spring MVC settings)
+# ===============================
+spring.mvc.cors.allowed-origins=*
+spring.mvc.cors.allowed-methods=*
+spring.mvc.cors.allowed-headers=*
+
+# ===============================
+# Logging (for debugging)
+# ===============================
+logging.level.org.springframework.security=INFO
+logging.level.com.example.demo.security=DEBUG
