--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.application.name=demo
 server.port=9001
 server.forward-headers-strategy=framework
 
+# ❌ Disable Whitelabel Error Page
+server.error.whitelabel.enabled=false
+
 # ===============================
 # Datasource (MySQL)
 # ===============================
@@ -26,7 +29,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 # ===============================
-# Swagger/OpenAPI
+# Swagger / OpenAPI
 # ===============================
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
@@ -35,19 +38,19 @@ springdoc.swagger-ui.enabled=true
 # ===============================
 # JWT Configuration
 # ===============================
-# IMPORTANT: JWT secret must be at least 32 characters for HS256
+# Minimum 32 characters for HS256
 jwt.secret=MySecretKeyForJwtToken12345MySecretKeyForJwtToken12345
 jwt.expiration=86400000
 
 # ===============================
-# CORS (Additional Spring MVC settings)
+# CORS (Spring MVC)
 # ===============================
 spring.mvc.cors.allowed-origins=*
 spring.mvc.cors.allowed-methods=*
 spring.mvc.cors.allowed-headers=*
 
 # ===============================
-# Logging (for debugging)
+# Security & Debug Logging
 # ===============================
-logging.level.org.springframework.security=INFO
+logging.level.org.springframework.security=DEBUG
 logging.level.com.example.demo.security=DEBUG
